--- a/template/install/temp_7.html
+++ b/template/install/temp_7.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Mccms产品 - Powered by Mccms</title>
 <link rel="stylesheet" href="<?=install_path?>packs/install/images/css.css" />
-<meta http-equiv="refresh" content="3; url=<?=Web_Path?>admin.php" />
+<meta http-equiv="refresh" content="3; url=<?=Web_Path.$adminname?>.php" />
 </head>
 <body>
 	<div class="wrap">
@@ -17,7 +17,7 @@
 			<section class="section">
 				<div class="">
 					<div class="success_tip cc">
-						<a href="<?=install_path?>admin.php" class="f16 b">安装完成，点击进入</a>
+						<a href="<?=Web_Path.$adminname?>.php" class="f16 b">安装完成，点击进入后台!~</a>
 						<p>如果浏览器没有自动跳转，请点击进入</p>
 					</div>
 					<div class=""> </div>
@@ -29,7 +29,7 @@
 		&copy; 2008-2020 <a href="http://www.mccms.cn" target="_blank">mccms.cn</a>（桂林崇胜网络科技有限公司旗下品牌）
 	</div>
 	<script> 
-		setTimeout(function(){window.location.href="<?=Web_Path?>admin.php"}, 3000);
+		setTimeout(function(){window.location.href="<?=Web_Path.$adminname?>.php"}, 3000);
 	</script>
 </body>
 </html>
